Edited Sysmo rest documents
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
@@ -4,7 +4,7 @@
 <div class="section" id="who-we-are">
 <h1>Who we are</h1>
 <p>A team of young and motivated engineers, mathematicians and computer scientists,
-providing services in engineering modeling and technical software development.s</p>
+providing services in engineering modeling and technical software development.</p>
 </div>
 <div class="section" id="what-we-can-do">
 <h1>What we can do</h1>
@@ -18,7 +18,7 @@ providing services in engineering modeling and technical software development.s<
 <div class="section" id="what-is-special-about-us">
 <h1>What is special about us</h1>
 <ul class="simple">
-<li>we can develop modeling tools customized to meet you needs</li>
+<li>we can develop modeling tools customized to meet your needs</li>
 <li>we can combine, customize and automate existing modeling tools</li>
 </ul>
 </div>
@@ -29,7 +29,7 @@ providing services in engineering modeling and technical software development.s<
 you should think of free as in free speech, not as in free beer.&quot;</p>
 <p class="attribution">&mdash;Richard Stallman</p>
 </blockquote>
-<p>We firmly believe in <strong>free and open source software</strong>. Open source gives you the freedom to use, modify, improve
+<p>We firmly believe in <strong>free and open-source software</strong>. Open source gives you the freedom to use, modify, improve
 and re-distribute your product at your discretion. Time and again, open source has proven to
 be a viable, and often superior, alternative to commercial closed source software. Open
 source guarantees that the software you use will be independent and given that it is backed by
