--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Industries.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Industries.html
@@ -1,17 +1,21 @@
 <div class="document" id="industries">
 <h1 class="title">Industries</h1>
-<p>The computer models, software tools and hardware prototypes that we develop can be applied in many areas ranging from large scale energy production to home automation.</p>
+<p>The computer models, software tools and hardware prototypes that we develop can be applied in many areas ranging from large-scale energy production to home automation.</p>
 <div class="section" id="automotive">
 <h1>Automotive</h1>
 <ul class="simple">
-<li>Conventional and innovative fuel systems (hydrogen, natural gas, LPG) including
-* storage tanks
-* refueling systems
-* fuel conditioning components (pressure regulators, fuel heaters etc)</li>
-<li>Fuel cells
-* chemical reaction modeling
-* thermal management
-* pressure management</li>
+<li>Conventional and innovative fuel systems (hydrogen, natural gas, LPG) including<ul>
+<li>storage tanks</li>
+<li>refueling systems</li>
+<li>fuel conditioning components (pressure regulators, fuel heaters, etc.)</li>
+</ul>
+</li>
+<li>Fuel cells<ul>
+<li>chemical reaction modeling</li>
+<li>thermal management</li>
+<li>pressure management</li>
+</ul>
+</li>
 <li>Engine thermal management</li>
 <li>Fuel injectors</li>
 <li>Stresses and fatigue calculations</li>
@@ -20,7 +24,7 @@
 <div class="section" id="hvac">
 <h1>HVAC</h1>
 <ul class="simple">
-<li>Refrigeran properties and fluid selection</li>
+<li>Refrigerant properties and fluid selection</li>
 <li>Compressor/expander models</li>
 <li>Thermal efficiency of heat exchangers, condensors, evaporators</li>
 <li>Complete system models including control logic</li>
@@ -33,7 +37,7 @@
 <li>Thermodynamic cycle models</li>
 <li>Exergy-based analysis</li>
 <li>Optimization of thermodynamic efficiency</li>
-<li>Low temperature ORC( Organic Rankine Cycles)</li>
+<li>Low temperature ORC (Organic Rankine Cycles)</li>
 <li>Ground heat storages</li>
 </ul>
 </div>
@@ -46,7 +50,7 @@
 <li>LNG pipelines</li>
 <li>LNG evaporators</li>
 <li>Fueling stations<ul>
-<li>high pressure CNG and CGH2 stations</li>
+<li>high-pressure CNG and CGH2 stations</li>
 <li>liquid hydrogen stations</li>
 </ul>
 </li>
