--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -38,7 +38,7 @@
 		Welcome to our computational platform. Here you will find a
 		number of one-page apps that could be used to tackle various
 		engineering problems. Please select the appropriate page/app from
-		the navigation bar on the top.
+		the navigation bar on the top or choose one from the thumbnails above.
 	</p>
 	<p>
 		We highly recommend that you use <span style="font-weight: bold;">Mozilla Firefox</span> or
