--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
@@ -90,4 +90,16 @@ Bulgarian Academy of Sciences, Institute of Mathematics and Informatics, Scienti
 </dd>
 </dl>
 </div>
+<div class="section" id="what-is-smoweb">
+<h1>What is SmoWeb?</h1>
+<p>SmoWeb is a computational platform, facilitating the creation of mathematical models.
+We are particularly interested in physical models used in engineering design.
+The simplest models contain a number of numerical input fields, and a number of result fields.
+More advanced models can contain multiple field groups, arranged in a hierarchical structure.
+The inputs can be physical quantities, true/false values, choices; resizable arrays, child objects with their own field structure and tables.
+Fields can be dynamically hidden or shown based on values of other fields.
+The result data can be presented to the user as quantity fields, tables and graphs.
+The models can be of arbitrary complexity, ranging from simple arithmetic to 3D transient simulations,
+based on finite elements/volumes methods.</p>
+</div>
 </div>
