--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Products.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Products.html
@@ -33,7 +33,7 @@
 <div class="section" id="smoweb">
 <h2><a class="toc-backref" href="#id6">SmoWeb</a></h2>
 <p>Online platform for engineering calculations and simulations.
-But if you are already here, you probably know what SmoWeb is.</p>
+Learn more about SmoWeb <a class="reference external" href="/?model=Platform" target="_self">here</a>.</p>
 </div>
 <div class="section" id="smoflow">
 <h2><a class="toc-backref" href="#id7">SmoFlow</a></h2>
