--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -1,5 +1,5 @@
 <h1 class="title">SmoWeb</h1>
-<div class="subtitle">The open computational platform by <a href="/SmoWebBase/Sysmo">SysMo</a></div>
+<div class="subtitle">The open computational platform by <a href="/SmoWebBase/Sysmo" target="_self">SysMo</a></div>
 <div style="margin-top: 30px; margin-bottom: 30px; text-align: center;">
 {% for routerName, router in pageView.router.registry.iteritems() %}
 	{% for pageName, pageClass in router.pages.iteritems() %}
