--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Platform.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Platform.html
@@ -14,6 +14,6 @@ Fields can be dynamically hidden or shown based on values of other fields.
 The result data can be presented to the user as quantity fields, tables and graphs.
 The models can be of arbitrary complexity, ranging from simple arithmetic to 3D transient simulations,
 based on finite elements/volumes methods.</p>
-<p>If you are curious about the implementation of SmoWeb, check out the project's <a class="reference external" href="/doc/index.html" target="_self">documentation</a></p>
+<p>If you are curious about the implementation of SmoWeb, check out the project's <a class="reference external" href="/static/doc/html/index.html" target="_self">documentation</a></p>
 </div>
 </div>
