Fixed field description tooltips - added tooltip directive and some styles
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -371,7 +371,7 @@ Tooltip
 */
 
 div.tooltip-inner {
-    max-width: 300px;
+    min-width: 500px;
     word-wrap: break-word;
     white-space: normal;
     text-align: left;
