--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Team.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Team.html
@@ -1,5 +1,5 @@
-<div class="document" id="people">
-<h1 class="title">People</h1>
+<div class="document" id="team">
+<h1 class="title">Team</h1>
 <table border="1" class="team-table docutils">
 <colgroup>
 <col width="40%" />
