--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -371,7 +371,8 @@ Tooltip
 */
 
 div.tooltip-inner {
-    min-width: 500px;
+    min-width:300px;
+    max-width: 500px;
     word-wrap: break-word;
     white-space: normal;
     text-align: left;
