--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -66,8 +66,8 @@
 				    <li class="dropdown">
 				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{router.label}}<span class="caret"></span></a>
 				      <ul class="dropdown-menu" role="menu">
-					{% for pageName, pageClass in router.pages.iteritems() %}
-						<li><a href="/{{routerName}}/{{pageClass.name}}">{{pageClass.label}}</a></li>						
+					{% for pageName, viewClass in router.pages.iteritems() %}
+						<li><a href="/{{routerName}}/{{viewClass.name}}">{{viewClass.label}}</a></li>						
 					{% endfor %}
 <!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
