--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -9,13 +9,13 @@
 					<a href="/{{routerName}}/{{viewClass.name}}?model={{module.name}}"
 							 target="_self">
 						<div class="thumb" 
-							{% if hasattr(module, 'description') %} 
-								data-toggle="tooltip" title="{{module.description.text}}" tooltip
+							{% if hasattr(module, 'description') %}
+								data-toggle="tooltip" title="{{module.description.asTooltip}}" tooltip
 							{% endif %}>
 							<div style="display: table-cell; vertical-align:middle; 
 									height: 115px; width: 160px; margin-top: 10px;">
 								<img {% if hasattr(module, 'figure') %}
-										src="{{ static(module.figure.src.replace('img', 'img/thumbnails').replace('.svg', '_thumb.png')) }}"
+										src="{{ static(module.figure.thumbSrc) }}"
 									{% else %}
 										style="opacity: 0.5; filter: alpha(opacity=50);"
 										src="{{ static('img/thumbnails/Calculator_thumb.png') }}"
