--- a/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.jinja
+++ b/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.jinja
@@ -23,7 +23,7 @@ google.load('{{gModuleName}}', '{{gModule.version}}', {'packages': {{gModule.pac
 {% endif %}
 {% endautoescape %}
 
-angular.module('{{pageView.name}}', ['smo'])
+angular.module('{{pageView.__class__.__name__}}', ['smo'])
 	.config(['$httpProvider', function($httpProvider) {
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
@@ -57,14 +57,14 @@ angular.module('{{pageView.name}}', ['smo'])
   		});
 			{% for module in pageView.modules %}
 				{% if issubclass(module, smo.model.model.NumericalModel) %}
-					$scope.{{module.name}} = { name: "{{module.name}}", views: {} };
+					$scope.{{module.__name__}} = { name: "{{module.__name__}}", views: {} };
 					{% for block in module.modelBlocks %}
 						{% if isinstance(block, smo.model.model.ModelView) %}
-							$scope.{{module.name}}.views.{{block.name}} = {name: "{{block.name}}", type: "{{block.ioType}}"};
+							$scope.{{module.__name__}}.views.{{block.name}} = {name: "{{block.name}}", type: "{{block.ioType}}"};
 						{% endif %}
 					{% endfor %}
 				{% elif issubclass(module, smo.model.model.HtmlModule) %}
-					$scope.{{module.name}} = { name: "{{module.name}}"};
+					$scope.{{module.__name__}} = { name: "{{module.__name__}}"};
 					{% for block in module.modelBlocks %}
 						{% if isinstance(block, smo.model.model.JsBlock) %}
 							{% include 'SmoWebBase/blocks/Block.jinja' %}
@@ -79,16 +79,16 @@ angular.module('{{pageView.name}}', ['smo'])
 {% block pills %}
 	{% for module in pageView.modules %}
 		<li role="presentation" class="{% if pageView|isActive(module) %}active{% endif %}">
-			<a id="{{module.name}}Pill" data-target="#{{module.name}}Content" role="tab" data-toggle="tab">{{module.label}}</a>
+			<a id="{{module.__name__}}Pill" data-target="#{{module.__name__}}Content" role="tab" data-toggle="tab">{{module.label}}</a>
 		</li>	
 	{% endfor %}
 {% endblock %}
 
 {% block content %}
-<div ng-app="{{pageView.name}}" ng-controller="{{pageView.controllerName}}">
+<div ng-app="{{pageView.__class__.__name__}}" ng-controller="{{pageView.controllerName}}">
   	<div class="tab-content">
 		{% for module in pageView.modules %}
-			<div class="tab-pane page-container {% if pageView|isActive(module) %}active{% endif %}" id="{{module.name}}Content">
+			<div class="tab-pane page-container {% if pageView|isActive(module) %}active{% endif %}" id="{{module.__name__}}Content">
 				{% if issubclass(module, smo.model.model.NumericalModel) %}
 					{% autoescape false %}
 					<h1 class="title">{{module.label}}</h1>
@@ -110,17 +110,17 @@ angular.module('{{pageView.name}}', ['smo'])
 					{% for block in module.modelBlocks %}
 						<div class="section">			
 							{% if isinstance(block, smo.model.model.ModelView) %}
-								<div smo-model-view="{{block.name}}" model-name="{{module.name}}" view-type="{{block.ioType}}" auto-fetch="{{block.autoFetch|lower}}" view-record-id="{{pageView.recordIdDict[block]}}"></div>
+								<div smo-model-view="{{block.name}}" model-name="{{module.__name__}}" view-type="{{block.ioType}}" auto-fetch="{{block.autoFetch|lower}}" view-record-id="{{pageView.recordIdDict[block]}}"></div>
 							{% elif isinstance(block, smo.model.model.HtmlBlock) %}
 								{% include 'SmoWebBase/blocks/Block.jinja' %}
 							{% endif %}
 						</div>
 					{% endfor %}
 				{% endif %}
-				{% if issubclass(module, smo.model.model.RestBlock) %}
-					<div class="tab-pane" id="{{module.name}}Content">
+				{% if issubclass(module, smo.model.model.RestModule) %}
+					<div class="tab-pane" id="{{module.__name__}}Content">
 						<div class="restview">
-							{% include module|getRestBlockUrl(pageView) %}
+							{% include module|getRestModuleUrl(pageView) %}
 						</div>
 					</div>
 				{% endif %}
