--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -6,7 +6,7 @@
 		{% for module in viewClass.modules %}
 			{% if issubclass(module, smo.model.model.NumericalModel) %}
 				{% if module.showOnHome %}
-					<a href="/{{routerName}}/{{viewClass.name}}?model={{module.name}}"
+					<a href="/{{routerName}}/{{viewClass.__name__}}?model={{module.__name__}}"
 							 target="_self">
 						<div class="thumb" 
 							{% if hasattr(module, 'description') %}
