--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -14,7 +14,7 @@
     <!-- AngularJS -->   
     <script src="{{ static('js/angular.min.js') }}"></script> 
 	
-	<!-- HTML5/CSS3 feature detection library -->
+	<!-- Modernizr - HTML5/CSS3 feature detection library -->
 	<script src="{{ static('js/Modernizr.js') }}"></script>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=EmulateIE9;">
